--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <a href="https://github.com/mathbiol/i2w2018" target="_blank">BMI 530 2018-19</a>
 
 <p> lala: <input></p>
+
+<script src="jonas.js"></script>
+<script src="richard.js"></script>
