--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@
 
 <script src="jonas.js"></script>
 <script src="richard.js"></script>
+<script src="GASTON.js"></script>
+<script src="sandeep.js"></script>
+<script src="Kyro.js"></script>
+<script src="hasit.js"></script>
