--- a/index.html
+++ b/index.html
@@ -8,3 +8,11 @@
 <script src="sandeep.js"></script>
 <script src="Kyro.js"></script>
 <script src="hasit.js"></script>
+
+<div>
+<h2>APIs to try (+ bring your own)</h2>
+<li>SPARCS at <a href="https://health.data.ny.gov/en/browse?q=SPARCS" target="_blank">health.data.ny.gov</a>. </li>
+<li>Cancer Genome Commons: <a href="https://gdc.cancer.gov/developers/gdc-application-programming-interface-api" target="_blank">GDC</a>.</li>
+<li>Yext <a href="https://developer.yext.com/docs/" target="_blank">APIs</a>. </li>
+<li> ... (add your own)</li>
+</div>
