--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <a href="https://github.com/mathbiol/i2w2018" target="_blank">BMI 530 2018-19</a>
 
 <p> lala: <input></p>
-
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
 <script src="jonas.js"></script>
 <script src="richard.js"></script>
-<script src="GASTON.js"></script>
+<script src="gaston.js"></script>
 <script src="sandeep.js"></script>
 <script src="Kyro.js"></script>
-<script src="hasit.js"></script>
+<!-- <script src="hasit.js"></script> -->
 
 <div>
 <h2>APIs to try (+ bring your own)</h2>
