--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="GASTON.js"></script>
 <script src="sandeep.js"></script>
 <script src="Kyro.js"></script>
-<script src="hasit.js"></script>
+<!--<script src="hasit.js"></script>-->
 
 <div>
 <h2>APIs to try (+ bring your own)</h2>
