--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="Kyro.js"></script>
 <script src="eviljoe.js"></script>
 
-<script src="eviljoe.js"></script>
+<script src="eileen.js"></script>
 
 <!--<script src="hasit.js"></script>-->
 
